--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,515 @@
-.App {
-  text-align: center;
+body{
+  background-color: #BCD8C1;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.burger-btn{
+  display: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navigation-bar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0px;
+  position: sticky;
+  background-color: #439A86;
+  width:100%;
+  height:120px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav{
+  background-color: #BCD8C1;
+  height:60%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width:80%;
+  border-radius: 25px;
+  margin:0 20px 0 20px;
+}
+.nav a{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  text-align: center;
+  height: 80%;
+  width:18%;
+  text-decoration: none;
   color: white;
+  font-size: clamp(16px, 2vw, 30px);
+  font-weight: 600;
+}
+.nav a.active{
+  
+  background-color: #439A86;
+  border-radius:25px;
 }
 
-.App-link {
-  color: #61dafb;
+
+.modal-backdrop {
+  position: fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background: rgba(0,0,0,0.5);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  z-index:1000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.modal-content {
+  background:white;
+  padding:20px;
+  border-radius:8px;
+  
+  max-width:90%;
+}
+
+.close-btn {
+  position:absolute;
+  top:10px;
+  right:10px;
+  width: 50px;
+  height: 50px;
+  font-size: 1.6em;
+}
+
+
+
+
+
+.main-page{
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap:20px;
+}
+
+.profile-section{
+  display: flex;
+  justify-content: space-between;
+  width:80%;
+}
+.profile-titles{
+  color:white;
+  text-align: center;
+}
+.profile1{
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  min-height:200px;
+  width:32%;
+  box-shadow: 10px 10px 10px;
+  background-color: #007991;
+  border-radius: 25px;
+}
+.profile-image{
+  height:120px;
+  width:120px;
+  background-image: url(./profile.png);
+  background-size: cover;
+  border-radius: 50%;
+}
+.profile2{
+  padding-top: 10px;
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
+  min-height:200px;
+  width:32%;
+  border-radius: 25px;
+  background-color: #007991;
+  box-shadow:10px 10px 10px;
+}
+.profile-image2{
+  height:120px;
+  width:120px;
+  background-image: url(./coolSmile.png);
+  background-size:cover;
+  border-radius: 50%;
+  
+}
+.profile3{
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  min-height:200px;
+  width:32%;
+  box-shadow: 10px 10px 10px;
+  background-color: #007991;
+  border-radius: 25px;
+}
+.profile-image3{
+  height:130px;
+  width:120px;
+  background-image: url(./book.png);
+  background-size: cover;
+  
+}
+.about-section{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  width:80%;
+  min-height:500px;
+  justify-content:space-between;
+  align-items: center;
+  
+}
+
+.about-title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #E9D985;
+  flex-wrap: wrap;
+  text-align:center;
+  border-radius: 25px;
+  height:50%;
+  width:70%;
+  font-size: 2em;
+  box-shadow: 10px 10px 10px;
+}
+
+.about-content{
+  border-radius: 25px;
+  background-color: #E9D985;
+  box-shadow:10px 10px 10px;
+  padding:0 20px 0 40px;
+  font-size: 1.3em;
+  font-weight: 600;
+  text-align: start;
+  min-height:400px;
+}
+
+.skills-section{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+
+  width:80%;
+  height:500px;
+  justify-content:space-between;
+  align-items: center;
+}
+.skills-title{
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align:center;
+  border:2px black solid;
+  border-radius: 25px;
+  height:50%;
+  width:70%;
+  font-size: 1.7em;
+  box-shadow:10px 10px 10px;
+}
+.skills-content{
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  border-radius: 25px;
+  background-color: white;
+  border:2px black solid; 
+  font-size: 1.5em;
+  font-weight: 600;
+  text-align: start;
+  height:550px;
+  
+}
+.skills-percents{
+  display: flex;  
+  flex-direction: column;
+  justify-content: end;
+  gap:50px;
+  align-items: center;
+}
+
+.section{
+  display: flex;
+  flex-direction: column;
+  
+  justify-content: space-between;
+  align-items: center;
+  
+}
+.html-column{
+  display: flex;
+  background-color: #ff5e00;
+  width:50px;
+  height:400px;
+  transform: scaleY(0);
+  transform-origin: bottom;
+}
+.htmlLogo{
+  margin-top:10px;
+  height:80px;
+  width: 80px;
+  background-image: url(./htmlLogo.png);
+  background-size: cover;
+}
+.html-column.animation{
+  animation: rise 0.8s ease-out forwards;
+}
+ @keyframes rise {
+    0% {
+      transform: scaleY(0);
+    }
+    100%{
+      transform: scaleY(1);
+    }
   }
-  to {
-    transform: rotate(360deg);
+.css-column{
+  display: flex;
+  background-color: #1b73ba;
+  width:50px;
+  height:380px;
+  transform: scaleY(0);
+  transform-origin: bottom;
+}
+.cssLogo{
+  margin-top:10px;
+  height:80px;
+  width: 70px;
+  background-image: url(./css.svg);
+  background-size:cover;
+  
+}
+.css-column.animation{
+  animation: rise 0.8s ease-out forwards;
+}
+
+.js-column{
+  display: flex;
+  background-color: #f7df1e;
+  width:50px;
+  height:70%;
+  transform: scaleY(0);
+  transform-origin: bottom;
+}
+.jsLogo{
+  margin-top:10px;
+  height:80px;
+  width: 80px;
+  background-image: url(./jsLogo.png);
+  background-size: cover;
+}
+.js-column.animation{
+  animation: rise 0.8s ease-out forwards;
+}
+
+.ts-column{
+  display: flex;
+  background-color: #3178c6;
+  width:50px;
+  height:55%;
+  transform: scaleY(0);
+  transform-origin: bottom;
+}
+.tsLogo{
+  margin-top:10px;
+  height:80px;
+  width: 80px;
+  background-image: url(./tsLogo.png);
+  background-size: cover;
+}
+.ts-column.animation{
+  animation: rise 0.8s ease-out forwards;
+}
+
+.react-column{
+  display: flex;
+  background-color: #61dafb;
+  width:50px;
+  height:60%;
+  transform: scaleY(0);
+  transform-origin: bottom;
+}
+.reactLogo{
+  margin-top:10px;
+  height:80px;
+  width: 90px;
+  background-image: url(./reactLogo.png);
+  background-size: cover;
+}
+.react-column.animation{
+  animation: rise 0.8s ease-out forwards;
+}
+
+@media (width < 1024px) {
+  body{
+ 
+}
+  .navigation-bar{
+    
   }
+  h1{
+    font-size: 24px;
+  }
+.about-section{
+  margin-top:5%;
+  display: flex;
+  flex-direction: column;
+  width:80%;
+  gap:15px;
+  justify-content:center;
+  
+  
+}
+.about-title{
+  width:40%;
+}
+.skills-section{
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  width:80%;
+  gap:15px;
+  justify-content:center;
+  height: auto;
+  
+}
+.skills-title{
+  width:40%;
+  
+}
+.skills-content{
+  width:100%;
+}
+}
+
+
+
+
+@media(width < 575px){
+  body{
+    
+  }
+  .burger-btn{
+    display: block;
+    position: absolute;
+    top:15px;
+    left:15px;
+    border:none;
+    width:30px;
+    height: 30px;
+    background-color: #439A86;
+    font-size:1.2em;
+    z-index: 1001;
+  }
+  .navigation-bar{
+    position: absolute;
+    align-items: start;
+    left:-250px;
+    width:40%;
+    height:100vh;
+    animation: slideOut 0.4s forwards;
+  }
+  .navigation-bar.visible{
+    animation: slideIn 0.4s forwards;
+  }
+  @keyframes slideIn {
+    0%{
+      position: absolute;
+    }
+    100%{
+      left:0px
+    }
+  }
+
+  @keyframes slideOut {
+    0%{
+      left:0px;
+    }
+    100%{
+      left:-300px;
+    }
+  }
+
+
+  .nav{
+    background-color: #439A86;
+    flex-direction: column;
+    justify-content:space-evenly;
+    
+    
+  }
+  .nav a{
+    background-color: #BCD8C1;
+    
+    width:25vw;
+    height:30px;
+    color: black;
+  }
+ .nav a.active{
+  border-radius: 0px;
+  border:3px black solid;
+ }
+  .profile-section{
+    margin-top:15%;
+    width:80%;
+  }
+  .profile-titles{
+    font-size:1em;
+  }
+  .profile-image{
+    height:100px;
+    width:100px;
+  }
+  .profile-image3{
+    margin-top: -15px;
+    height:85px;
+    width:80px;
+  }
+  .profile-image2{
+    margin-bottom: 20px;
+    height:85px;
+    width:85px;
+  }
+
+  .skills-percents{
+    
+  }
+  .html-column{
+    width:20px;
+  }
+  .htmlLogo{
+    height: 50px;
+    width:50px;
+  }
+  .css-column{
+    width:20px;
+  }
+  .cssLogo{
+    height: 50px;
+    width:44px;
+  }
+  .js-column{
+    width:20px;
+  }
+  .jsLogo{
+    height: 50px;
+    width:50px;
+  }
+  .ts-column{
+    width:20px;
+  }
+  .tsLogo{
+    height: 50px;
+    width:50px;
+  }
+  .react-column{
+    width:20px;
+  }
+  .reactLogo{
+    height: 50px;
+    width:55px;
+}
 }
